# Chickenmaster

./: .coverage  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  500_generation_full_log.txt  CHANGELOG.md  README.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.0.md  analyze_codebase.py  analyze_imports.py  chicken_debug_mud.py  chicken_mud_game.py  debug_tracing_system.py  docs_summary.md  game_constants.py  import_analysis_report.md  import_graph_before.dot  improved_event.json  install_reqs.py  install_reqs_dev.py  merge_request_template.md  mr_body_updated.md  mr_template_black_format.md  mr_template_black_models.md  mr_template_final.md  mypy.ini  mypy_output.txt  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  ruff.toml  schema.py  test_generated_event.json  test_mud_integration.py  test_research_module.py  test_strategy_debug.py  test_strategy_patterns.py  todo.md
.github/: SECRETS_GUIDE.md
data/: economy_config.json  events.toml  game_initial_values.xlsx  game_initial_values_with_formulas.xlsx  metrics_snap_250526_032127_78577.json  metrics_snap_250526_032127_78754.json  metrics_snap_250526_032127_78924.json  metrics_snap_250526_032127_79024.json  metrics_snap_250526_032127_79099.json  metrics_snap_250526_032127_79293.json  metrics_snap_250526_032127_79501.json  metrics_snap_250526_032127_79575.json  metrics_snap_250526_032127_79645.json  metrics_snap_250526_032127_79719.json  metrics_snap_250526_032127_79820.json  metrics_snap_250526_032127_79896.json  metrics_snap_250526_032127_80067.json  metrics_snap_250526_032127_80234.json  metrics_snap_250526_032127_82250.json  metrics_snap_250526_032127_85637.json  metrics_snap_250526_032127_85832.json  metrics_snap_250530_134258_35490.json  metrics_snap_250530_134258_35690.json  metrics_snap_250530_134258_35989.json  metrics_snap_250530_134258_36189.json  metrics_snap_250530_134258_36388.json  metrics_snap_250530_143948_06137.json  metrics_snap_250530_143948_06339.json  metrics_snap_250530_143948_06436.json  metrics_snap_250530_143948_06638.json  metrics_snap_250530_143948_06936.json  metrics_snap_250607_003506_59015.json  metrics_snap_250607_003506_59052.json  metrics_snap_250607_003506_59076.json  metrics_snap_250607_003506_59097.json  metrics_snap_250607_003506_59120.json  metrics_snap_250607_023556_64909.json  metrics_snap_250607_023556_64940.json  metrics_snap_250607_023556_64964.json  metrics_snap_250607_023556_64985.json  (+22 more)
dev_tools/: __init__.py  balance_simulator.py  config.py  event_bank_indexer.py  event_bank_manager.py  event_cascade_converter.py  event_condition_fixer.py  event_generator.py  event_structure_converter.py  event_validator.py
docs/: API.md  CONTRIBUTING.md  DESIGN_DECISIONS.md  DEVELOPER_GUIDE.md  DOCUMENTATION_MAINTENANCE.md  EVENT_BANK_INTEGRATION.md  EVENT_BANK_MANAGEMENT.md  EVENT_SYSTEM_DESIGN.md  EVENT_VALIDATION.md  INDEX.md  REFACTORING_DECISIONS.md  REFACTORING_GUIDELINES.md  architecture_specification.md  balance_simulator_architecture.md  balance_simulator_design.md  balance_simulator_pr_details.md  cascade_module.md  cascade_module_architecture.md  claude_code_implementation_report.md  claude_code_usage.md  content_guidelines.md  economy_spec.md  event_bank_integration_report.md  event_bank_integration_report_batch1.md  event_bank_pause_impact_analysis.md  event_class_refactoring.md  event_pipeline_results.md  event_schema_and_cascade_design.md  (+13 more)
(+380 files in other folders)
