[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chickmaster"
version = "0.4.0"
description = "치킨집 경영 시뮬레이션 게임"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]

[tool.ruff.lint.per-file-ignores]
"scripts/mass_event_generation.py" = ["E402"]  # sys.path 수정 후 import가 필요한 경우 

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true 