[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chickmaster"
version = "0.4.0"
description = "치킨집 경영 시뮬레이션 게임"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

[tool.ruff]
target-version = "py312"
# 기존 설정은 유지하고 E501만 추가
lint.ignore = ["E501","PLR0912","RUF001","PLR0915","PLR0913","PLR0911"]
#E501 : 라인 길이 제한
#PLR0912 : 함수 분기수 제한
#RUF001 : 유니코드 문자(이모지)제한
#PLR0915 : 함수 실행문 분기 제한
#PLR0913 : 함수 분기수 제한
#PLR0911 : 함수 분기수 제한
lint.select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]

[tool.ruff.lint.per-file-ignores]
"scripts/mass_event_generation.py" = ["E402"]  # sys.path 수정 후 import가 필요한 경우 

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true 
